k3d/static-hosting-example/config/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-hosting-example
spec:
  selector:
    matchLabels:
      app: static-hosting-example
  replicas: 1
  template:
    metadata:
      labels:
        app: static-hosting-example
    spec:
      containers:
        - name: static-hosting-example
          image: ghcr.io/mio-me/nginx-example:1.2.0
          ports:
            - containerPort: 80
