k3d/static-hosting-example/config/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-hosting-example
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: static-hosting-example
            port:
              number: 80
